--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ nav ul li {
     display: inline-block;
     margin-right: 20px;
 }
-.logo:hover{
+
+.logo:hover {
     transform: scale(1.1);
 }
 
@@ -36,12 +37,14 @@ a {
     text-decoration: none;
     color: #555;
 }
-a:hover{
-   
+
+a:hover {
+
     color: #1e5cd7;
     cursor: pointer;
 }
-.enquiry{
+
+.enquiry {
     position: fixed;
     bottom: 80px;
     right: 50px;
@@ -53,7 +56,8 @@ a:hover{
     font-size: 15px;
     border-radius: 5px;
 }
-.enquiry:hover{
+
+.enquiry:hover {
     cursor: pointer;
     text-decoration: none;
 }
@@ -185,11 +189,13 @@ h4 {
 .rating .fa {
     color: orange;
 }
-.button{
-   margin: 5px;
-   padding: 5px;
- }
-#det{
+
+.button {
+    margin: 5px;
+    padding: 5px;
+}
+
+#det {
     border: none;
     width: 100px;
     color: blue;
@@ -197,11 +203,13 @@ h4 {
     font-size: 16px;
     cursor: pointer;
 }
-#det:hover{
+
+#det:hover {
     text-decoration: none;
     font-size: 18px;
 }
-#book{
+
+#book {
     color: white;
     background-color: blue;
     width: 100px;
@@ -209,31 +217,36 @@ h4 {
     font-size: 18px;
     border-style: none;
     border-radius: 10px;
-   
-      
+
+
 }
-#book:hover{
+
+#book:hover {
     color: yellow;
     background-color: blue;
     font-weight: bold;
     cursor: pointer;
 }
-.button-1{
+
+.button-1 {
     flex-basis: 30%;
     display: flex;
     justify-content: center;
     margin: 20px;
 }
-.button-1 #det{
+
+.button-1 #det {
     margin: 5px 20px;
     width: 150px;
     font-size: 20px;
 }
-.button-1 #book{
+
+.button-1 #book {
     margin: 5px 20px;
     width: 150px;
     font-size: 20px;
 }
+
 .col-4:hover {
     transform: translateY(-5px);
 }
@@ -259,26 +272,30 @@ h4 {
 .col-5 p {
     font-size: 16px;
 }
-        /* ------ contact us ------- */
-.contact{
+
+/* ------ contact us ------- */
+.contact {
     height: 400px;
     margin: 10px 100px;
-    background-image: url(./new_york_building_city_skyscrapers_evening_28516_1366x768.jpg) ;
+    background-image: url(./static/new_york_building_city_skyscrapers_evening_28516_1366x768.jpg);
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover; 
-    
+    background-size: cover;
+
 }
-.contact h1{
+
+.contact h1 {
     color: white;
     padding-left: 20px;
     padding-top: 5px;
 }
-.contact p{
+
+.contact p {
     color: rgba(255, 255, 255, 0.588);
     padding-left: 20px;
     padding-top: 20px;
 }
+
 .contact a {
     display: flex;
     text-align: center;
@@ -289,97 +306,150 @@ h4 {
 }
 
 
-    /* ------review -------*/
-.review{
-padding-top: 50px;
+/* ------review -------*/
+.review {
+    padding-top: 50px;
 }
-.review .col-3{
+
+.review .col-3 {
     text-align: center;
     padding: 40px 20px;
-    box-shadow: 0 0 20px 0px rgba(0,0,0,0.1);
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    transition: transform 0.5s ;
+    transition: transform 0.5s;
 }
-.review .col-3 img{
+
+.review .col-3 img {
     width: 60px;
     height: fit-content;
     margin-top: 20px;
     border-radius: 50%;
 }
-.review .col-3:hover{
+
+.review .col-3:hover {
     transform: translateY(-10px);
 }
-.fa.fa-quote-left{
+
+.fa.fa-quote-left {
     font-size: 50px;
     color: orange;
 }
-.col-3 p{
+
+.col-3 p {
     font-size: 15px;
     margin: 15px 0;
     color: #777;
 }
-.review .col-3 h3{
+
+.review .col-3 h3 {
     font-weight: 500;
     color: #555;
     font-size: 20px;
 }
- 
-     /* -------  footer ------- */
 
-.footer{
-    background:#292c2f;
+/* -------  footer ------- */
+
+.footer {
+    background: #292c2f;
     color: white;
     font-size: 15px;
     padding: 60px 0 20px;
-}   
+}
+
 .footer p {
     color: #8a8a8a;
 }
-.footer h3{
+
+.footer h3 {
     color: white;
     margin-bottom: 20px;
 }
-.footer-col-1,.footer-col-2 .footer-col-3{
+
+.footer-col-1,
+.footer-col-2 .footer-col-3 {
     min-width: 250px;
     margin-bottom: 20px;
 }
-.footer-col-1{
+
+.footer-col-1 {
     flex-basis: 35%;
     color: #bbbbbbbb;
 }
-.footer-col-1 ul li a{
+
+.footer-col-1 ul li a {
     color: #bbbbbbbb;
     filter: grayscale(100%);
 }
+
 .footer-col-1 ul li a:hover {
     color: white;
     filter: grayscale(0);
 }
-.footer-col-2{
+
+.footer-col-2 {
     flex: 1;
     text-align: center;
-   
+
 }
-.footer-col-2 ul{
+
+.footer-col-2 ul {
     list-style-type: none;
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: nowrap;
 }
-.footer-col-2 ul li a img{
-    
+
+.footer-col-2 ul li a img {
+
     width: 80px;
     height: 80px;
     padding: 20px;
     margin: 5px;
 }
-.footer hr{
+
+.footer hr {
     border: none;
     background: #b5b5b5;
     height: 2px;
     margin: 10px 0px;
 }
-.copyright{
+
+.copyright {
     text-align: center;
+}
+
+.menu-icon {
+    width: 28px;
+    margin-left: 20px;
+    display: none;
+}
+
+/* ------ media query for menu ------ */
+
+@media only screen and (max-width: 800px) {
+    nav ul {
+        position: absolute;
+        top: 70px;
+        left: 0;
+        background: #333;
+        width: 100%;
+        overflow: hidden;
+        transition: max-height 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin-right: 50px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    nav ul li a {
+        color: #fff;
+    }
+    .menu-icon{
+        display: block;
+        cursor: pointer;
+    }
 }
