--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a:hover {
 
 .enquiry {
     position: fixed;
-    bottom: 80px;
+    bottom: 50px;
     right: 50px;
     background-color: #555;
     color: white;
@@ -299,7 +299,8 @@ h4 {
 .contact a {
     display: flex;
     text-align: center;
-    justify-content: flex-end;
+    justify-content: center;
+    padding: 10px;
     margin-right: 50px;
     margin-left: 88%;
     margin-top: -80px;
@@ -430,7 +431,7 @@ h4 {
 @media only screen and (max-width: 800px) {
     nav ul {
         position: absolute;
-        top: 70px;
+        top: 100px;
         left: 0;
         background: #333;
         width: 100%;
@@ -441,15 +442,74 @@ h4 {
     nav ul li {
         display: block;
         margin-right: 50px;
-        margin-top: 10px;
+        margin-top: 30px;
         margin-bottom: 10px;
     }
 
     nav ul li a {
         color: #fff;
     }
-    .menu-icon{
+
+    .menu-icon {
         display: block;
         cursor: pointer;
+    }
+
+    .contact {
+        height: 250px;
+        margin: 10px 10px;
+    }
+
+    .contact a {
+        padding: 10px;
+        margin-left: 80%;
+    }
+}
+
+/* media query for less than 600 screen size  */
+
+@media only screen and (max-width: 600px) {
+
+    .row{ 
+        text-align: center;
+    }
+
+    .col-2 , .col-3 , .col-4{
+flex-basis: 100%;
+    }
+    nav ul {
+        position: absolute;
+        top: 100px;
+        left: 0;
+        background: #333;
+        width: 100%;
+        overflow: hidden;
+        transition: max-height 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin-right: 50px;
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
+
+    nav ul li a {
+        color: #fff;
+    }
+
+    .menu-icon {
+        display: block;
+        cursor: pointer;
+    }
+
+    .contact {
+        height: 250px;
+        margin: 10px 10px;
+    }
+
+    .contact a {
+        padding: 10px;
+        margin-left: 80%;
     }
 }
